# ucsb-cs260-program-analysis

./: .gitignore  README.md
assign-1/assign-1-frozen/: Cargo.toml  Makefile  run-constants-analysis.sh
assign-1/assign-1-frozen/src/: abs.rs  store.rs
assign-2/: Cargo.toml  Makefile  TODO  a1.txt  a2.txt  abcde.dot  build-analyses.sh  control_dependence_analysis  ctrl.ipynb  ctrl.py  debug.sh  diff-test-ctrl.sh  diff-test-rdef.sh  diff.txt  prog_instrs_fail.json  prog_instrs_succ.json  reach_definition_analysis  readme.md  remote_control.sh  remote_rdef.sh  run-control.sh  run-demo-ctrl.sh  run-demo-rdef.sh  run-rdef.sh  run-test-ctrl.sh  run-test-rdef.sh  sort.ipynb  test-tests-ctrl.sh  test-tests-rdef.sh  test.dot  test4.graphml
assign-2/assign-2/: Cargo.toml
assign-2/assign-2/src/: cfg.rs  lir.rs  store.rs  utils.rs
assign-2/demos/json/: test10.json  test22.json  test3.json  test32.json  test4.json
assign-2/demos/lir/: test10.lir  test11.lir  test16.1.lir  test4.lir  test7.lir  test8.lir
assign-2/demos/rdef_out/: test30.const.out  test6.const.out
assign-2/demos/std_ctrl_out/: test10.ctrl.out  test12.ctrl.out  test14.ctrl.out  test21.ctrl.out  test29.ctrl.out  test32.ctrl.out  test6.ctrl.out  test7.inter.out  test8.ctrl.out  test8.inter.out  test9.inter.out
assign-2/demos/std_rdef_out/: test1.const.out  test10.rdef.out  test12.rdef.out  test14.rdef.out  test15.rdef.out  test16.rdef.out  test2.rdef.out  test21.rdef.out  test27.rdef.out  (+3 more)
assign-2/examples/: convert_cb2lir.py
assign-2/src/: abs.rs  cfg.rs  lir.rs  store.rs  utils.py  utils.rs
(+248 files in other folders)
