[package]
name = "cs260"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"

[[bin]]
name = "reach_definition_analysis"
path = "src/bin/rdef.rs"

[[bin]]
name = "control_dependence_analysis"
path = "src/bin/ctrl.rs"
