[package]
name = "cs260"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
colored = "2.0"

[[bin]]
name = "constants_analysis"
path = "src/bin/constants_analysis.rs"

[[bin]]
name = "intervals_analysis"
path = "src/bin/intervals_analysis.rs"

